@@ -94,97 +94,164 @@
 #include "cmds.h"
 #include <pbs_config.h>   /* the master config generated by configure */
 
-static char ident[] = "@(#) $RCSfile$ $Revision$";
+/* qdel */
 
-int main(argc, argv, envp) /* qdel */
-int argc;
-char **argv;
-char **envp;
-{
-    int c;
-    int errflg=0;
-    int any_failed=0;
-    char *pc;
+int main(
 
-    char job_id[PBS_MAXCLTJOBID];	/* from the command line */
+  int    argc,
+  char **argv,
+  char **envp)
 
-    char job_id_out[PBS_MAXCLTJOBID];
-    char server_out[MAXSERVERNAME];
-    char rmt_server[MAXSERVERNAME];
+  {
+  int c;
+  int errflg=0;
+  int any_failed=0;
+  char *pc;
+
+  char job_id[PBS_MAXCLTJOBID];	/* from the command line */
+
+  char job_id_out[PBS_MAXCLTJOBID];
+  char server_out[MAXSERVERNAME];
+  char rmt_server[MAXSERVERNAME];
 
 #define MAX_TIME_DELAY_LEN 32
-    char warg[MAX_TIME_DELAY_LEN+1];
+  char extend[MAX_TIME_DELAY_LEN + 1];
 
-#define GETOPT_ARGS "W:"
+#define GETOPT_ARGS "W:p"
                  
-    warg[0]='\0';
+  extend[0] = '\0';
 
-    while ((c = getopt (argc, argv, GETOPT_ARGS )) != EOF)
-        switch (c) {
-        case 'W':
-            pc = optarg;
-            if ( strlen(pc) == 0 ) {
-                fprintf(stderr, "qdel: illegal -W value\n");
-                errflg++;
-		break;
-            }
-            while ( *pc != '\0' ) {
-                if ( ! isdigit(*pc) ) {
-                    fprintf(stderr, "qdel: illegal -W value\n");
-                    errflg++;
-		    break;
-                }
-                pc++;
-            }
-            strcpy(warg, DELDELAY);
-            strcat(warg, optarg);
-            break;
-        default :
+  while ((c = getopt(argc,argv,GETOPT_ARGS)) != EOF)
+    {
+    switch (c) 
+      {
+      case 'p':
+
+        if (extend[0] != '\0')
+          errflg++;
+
+        strcpy(extend,DELPURGE);
+        strcat(extend,"1");
+
+        break;
+
+      case 'W':
+
+        if (extend[0]!='\0')
+          errflg++;
+
+        pc = optarg;
+
+        if (strlen(pc) == 0) 
+          {
+          fprintf(stderr,"qdel: illegal -W value\n");
+        
+          errflg++;
+
+          break;
+          }
+
+        while (*pc != '\0') 
+          {
+          if (!isdigit(*pc)) 
+            {
+            fprintf(stderr,"qdel: illegal -W value\n");
+
             errflg++;
-        }
 
-    if (errflg || optind >= argc) {
-        static char usage[]="usage: qdel [-W delay] job_identifier...\n";
-        fprintf(stderr, usage);
-        exit (2);
+            break;
+            }
+
+          pc++;
+          }
+
+        strcpy(extend,DELDELAY);
+        strcat(extend,optarg);
+
+        break;
+
+      default:
+
+        errflg++;
+
+        break;
+      }
+    }    /* END while (c) */
+
+  if ((errflg != 0) || (optind >= argc)) 
+    {
+    static char usage[] = "usage: qdel [{ -p | -W delay}] <JOBID>[ <JOBID>]...\n";
+
+    fprintf(stderr,usage);
+
+    fprintf(stderr, "       -W and -p are mutually exclusive\n");
+
+    exit(2);
     }
 
-    for ( ; optind < argc; optind++) {
-        int connect;
-        int stat=0;
-	int located = FALSE;
+  for (;optind < argc;optind++) 
+    {
+    int connect;
+    int stat=0;
+    int located = FALSE;
 
-        strcpy(job_id, argv[optind]);
-        if ( get_server(job_id, job_id_out, server_out) ) {
-            fprintf(stderr, "qdel: illegally formed job identifier: %s\n", job_id);
-            any_failed = 1;
-            continue;
-        }
+    strcpy(job_id,argv[optind]);
+
+    if (get_server(job_id,job_id_out,server_out)) 
+      {
+      fprintf(stderr,"qdel: illegally formed job identifier: %s\n", 
+        job_id);
+
+      any_failed = 1;
+
+      continue;
+      }
+
 cnt:
-        connect = cnt2server(server_out);
-        if ( connect <= 0 ) {
-            fprintf(stderr, "qdel: cannot connect to server %s (errno=%d)\n",
-                    pbs_server, pbs_errno);
-            any_failed = pbs_errno;
-            continue;
+
+    connect = cnt2server(server_out);
+
+    if (connect <= 0) 
+      {
+      fprintf(stderr,"qdel: cannot connect to server %s (errno=%d)\n",
+        pbs_server, 
+        pbs_errno);
+
+      any_failed = pbs_errno;
+
+      continue;
+      }
+
+    stat = pbs_deljob(connect,job_id_out,extend);
+
+    if (stat && (pbs_errno != PBSE_UNKJOBID)) 
+      {
+      prt_job_err("qdel",connect,job_id_out);
+
+      any_failed = pbs_errno;
+      } 
+    else if (stat && (pbs_errno == PBSE_UNKJOBID) && !located) 
+      {
+      located = TRUE;
+
+      if (locate_job(job_id_out,server_out,rmt_server)) 
+        {
+        pbs_disconnect(connect);
+
+        strcpy(server_out,rmt_server);
+
+        goto cnt;
         }
 
-        stat = pbs_deljob(connect, job_id_out, warg);
-        if ( stat && (pbs_errno != PBSE_UNKJOBID) ) {
-	    prt_job_err("qdel", connect, job_id_out);
-            any_failed = pbs_errno;
-        } else if ( stat && (pbs_errno == PBSE_UNKJOBID) && !located ) {
-	    located = TRUE;
-	    if ( locate_job(job_id_out, server_out, rmt_server) ) {
-	        pbs_disconnect(connect);
-		strcpy(server_out, rmt_server);
-		goto cnt;
-	    }
-	    prt_job_err("qdel", connect, job_id_out);
-	    any_failed = pbs_errno;
-	}
+      prt_job_err("qdel",connect,job_id_out);
 
-        pbs_disconnect(connect);
+      any_failed = pbs_errno;
+      }
+
+    pbs_disconnect(connect);
     }
-    exit(any_failed);
-}
+
+  exit(any_failed);
+  }  /* END main() */
+
+
